--- a/template.css
+++ b/template.css
@@ -50,7 +50,7 @@
     --color-plain: #3a3d42;
     --color-plain-hover: #4a4d52;
     --color-plain-active: #2f3237;
-    --color-plain-disabled: #5a5d62;
+    --color-plain-disabled: #1b1d1f;
     --color-plain-overlay-text: #e5e7eb;
     --color-plain-border: #4a4d52;
 }
