--- a/template.css
+++ b/template.css
@@ -60,3 +60,13 @@ body {
     color: var(--color-text-primary);
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.page-container-header {
+    margin-top: 1rem; /* mt-4 */
+    position: absolute; /* absolute */
+    left: 50%; /* left-1/2 */
+    transform: translateX(-50%); /* transform -translate-x-1/2 */
+    font-size: 1.5rem; /* text-2xl */
+    text-align: center; /* text-center */
+    font-weight: 700; /* font-bold */
+}
